--- a/webclient/index.html
+++ b/webclient/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-black scheme-dark">
+<html lang="en" class="bg-white antialiased font-sans">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>budgetting</title>
   </head>
   <body id="root" class="flex flex-col min-h-screen">
     <script type="module" src="/src/main.tsx"></script>
