--- a/webclient/index.html
+++ b/webclient/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="bg-white text-black dark:bg-slate-950 dark:text-white antialiased font-sans">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+        <link rel="icon" type="image/svg+xml" href="/fish.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="/js/theme.js"></script>
         <title>budgetting</title>
