Fixes some responsive design for mobile devices especially the nav

--- a/webclient/index.html
+++ b/webclient/index.html
@@ -7,7 +7,7 @@
         <script src="/js/theme.js"></script>
         <title>budgetting</title>
 </head>
-<body id="root" class="flex flex-col min-h-screen">
+<body id="root" class="flex flex-col min-h-screen p-4 md:p-8">
     <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
