--- a/webclient/index.html
+++ b/webclient/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-white text-black dark:bg-slate-950 dark:text-white antialiased font-sans">
+<html lang="en" class="bg-slate-100 text-black dark:bg-slate-950 dark:text-white antialiased font-sans">
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/fish.svg" />
