Fixes some layout issues

--- a/webclient/index.html
+++ b/webclient/index.html
@@ -7,7 +7,7 @@
         <script src="/js/theme.js"></script>
         <title>budgetting</title>
 </head>
-<body id="root" class="relative grid grid-rows-[max-content_1fr_max-content] min-h-screen m-4 md:m-8">
+<body id="root" class="relative grid grid-rows-[max-content_1fr_max-content] min-h-screen">
     <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
